fix: add more spacing between the archive items

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -147,7 +147,7 @@ body {
 }
 
 .post-item {
-    margin-bottom: 1em;
+    margin-bottom: 2em;
 }
 
 .post-link {
